# balancing-bot

./: README.md
backend/: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
backend/.github/workflows/: ci.yml
backend/backend/: __init__.py  main.py
backend/config/: export.yaml  ppo.yaml  reinforce.yaml
backend/src/: export.py  policy_model.py  train.py
backend/src/algorithms/: __init__.py  ppo.py  reinforce.py
backend/tests/: test_main.py
frontend/: .audit-ci.json  .editorconfig  .gitattributes  .gitignore  Makefile  README.md  biome.json  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  style.css  tsconfig.json  vite.config.js
frontend/.github/: dependabot.yml
frontend/.github/workflows/: ci.yml
frontend/public/models/: policy_model_best.onnx
frontend/src/: config.ts  index.html  main.ts  script.ts  utils.ts  vite-env.d.ts
frontend/src/utils/: math.ts  pane_utils.ts  threejs_objects.ts
frontend/tests/: script.test.ts  setup.ts
frontend/tests/utils/: math.test.ts
